--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "interactive": "node src/index.js",
     "test": "node test-api-fase2.js",
     "test-api": "node test-api-fase2.js",
+    "test-api-server": "./test-api-server.sh",
     "test-new": "node test-new-components.js",
     "test-quick": "node test-quick-new.js",
+    "test-ai": "node test-ai-services.js",
     "demo": "node demo-generator.js",
     "quick-demo": "node quick-demo.js",
     "setup": "chmod +x setup.sh && ./setup.sh",
@@ -38,26 +40,28 @@
   "author": "Bancolombia",
   "license": "MIT",
   "dependencies": {
-    "handlebars": "^4.7.8",
-    "openai": "^4.24.1",
-    "cohere-ai": "^7.6.2",
     "@pinecone-database/pinecone": "^1.1.2",
+    "axios": "^1.9.0",
     "chromadb": "^1.7.3",
-    "express": "^4.18.2",
+    "cohere-ai": "^7.6.2",
+    "compromise": "^14.10.0",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "rate-limiter-flexible": "^2.4.2",
-    "joi": "^17.11.0",
-    "winston": "^3.11.0",
     "dotenv": "^16.3.1",
-    "uuid": "^9.0.1",
+    "express": "^4.18.2",
+    "handlebars": "^4.7.8",
+    "helmet": "^7.1.0",
+    "image-size": "^1.2.1",
+    "joi": "^17.11.0",
     "lodash": "^4.17.21",
     "natural": "^6.12.0",
-    "compromise": "^14.10.0"
+    "openai": "^4.24.1",
+    "rate-limiter-flexible": "^2.4.2",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
     "supertest": "^6.3.3"
   }
 }
